[project]
name = "mistral"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.4.0",        # Official Ollama Python client for communicating with local LLMs
    "langchain>=0.3.0",     # Framework for building LLM applications
    "langgraph>=0.2.0",     # For building stateful agents with graphs
    "langchain-ollama>=0.2.0",  # LangChain integration with Ollama
]
